--- a/portolio_angular/src/app/componentes/infor-sobre-mi/infor-sobre-mi.component.css
+++ b/portolio_angular/src/app/componentes/infor-sobre-mi/infor-sobre-mi.component.css
@@ -36,3 +36,26 @@
 
     height: 44px;
 }
+
+.btn{
+    padding: 12px 18px;
+    font-weight: 700;    
+}
+
+.btn-brand{
+    background-color: var(--color-brand);
+    border-color: var(--color-brand);
+    color: var(--color-base);
+}
+
+.btn-brand:hover{
+    background-color: var(--color-brand2);
+    color: var(--color-base);
+    border-color: var(--color-brand2);
+}
+
+.btn-brand:focus{
+    background-color: var(--color-brand2);
+    color: var(--color-base);
+    border-color: var(--color-brand2);
+}
